2010-07-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/Parser.cs:
	* MonoDevelop.Xml.StateEngine/XmlNameState.cs:
	* MonoDevelop.Xml.StateEngine/XmlAttributeState.cs:
	* MonoDevelop.Xml.StateEngine/XmlClosingTagState.cs: Better
	  errors.

	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs:
	  Newlines are valid in attributes,

2010-07-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Track
	  API changes.

2010-05-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor/XmlEditorService.cs: Clean up dialog
	  placement.

2010-05-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Fix
	  failing test by making sure that OnParsedDocumentUpdated is
	  called when the file is first loaded, and moving all the new
	  parsed document logic handling there.

2010-05-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Xml.Formatting/XmlFormattingPolicyPanelWidget.cs:
	  Fix translation error.

2010-05-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs:
	* MonoDevelop.XmlEditor.Completion/XmlCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/XmlTagCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/IXmlCompletionProvider.cs:
	* MonoDevelop.XmlEditor.Completion/XmlSchemaCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/EmptyXmlCompletionProvider.cs:
	* MonoDevelop.XmlEditor.Completion/XmlCompletionDataCollection.cs:
	* MonoDevelop.XmlEditor.Completion/InferredXmlCompletionProvider.cs:
	* MonoDevelop.XmlEditor.Completion/XmlMultipleClosingTagCompletionData.cs:
	  Track API changes.

2010-05-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Xml.Formatting/MonoXmlPolicy.xml: Added
	  attribute to explicitly allow differential serialization for
	  a policy (which is disabled by default).

2010-04-30  Michael Hutchinson  <mhutchinson@novell.com>
