@@ -42,11 +42,6 @@ namespace MonoDevelop.XmlEditor
 	
 	public class XmlDocumentParser : AbstractParser
 	{
-		
-		public XmlDocumentParser () : base (null, "application/xml")
-		{
-		}
-		
 		public override bool CanParse (string fileName)
 		{
 			return XmlTextEditorExtension.IsFileNameHandled (fileName);
