@@ -1,3 +1,9 @@
+2010-07-12  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.XmlEditor.addin.xml:
+	* MonoDevelop.XmlEditor/XmlDocumentParser.cs: Track
+	  ProjectDomService/Parser API.
+
 2010-07-11  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Xml.StateEngine/Parser.cs:
